--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,10 @@ language: rust
 
 rust:
     - nightly
-    - 1.0.0
+    - beta
+    - stable
+
+matrix:
+    allow_failures:
+        - rust: nightly
+
