--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,6 @@ homepage = "https://github.com/dguo/strsim-rs"
 repository = "https://github.com/dguo/strsim-rs"
 documentation = "https://docs.rs/strsim/"
 
-
+[badges]
+travis-ci = { repository = "dguo/strsim-rs" }
+appveyor = { repository = "dguo/strsim-rs" }
