--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["string", "similarity", "Hamming", "Levenshtein", "Jaro"]
 homepage = "https://github.com/dguo/strsim-rs"
 repository = "https://github.com/dguo/strsim-rs"
 documentation = "https://docs.rs/strsim/"
+exclude = ["/.travis.yml", "/appveyor.yml", "/dev"]
 
 [badges]
 travis-ci = { repository = "dguo/strsim-rs" }
