Use Travis for Windows testing
Travis added Windows support a few weeks ago, so we can drop AppVeyor.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: rust
 
+os:
+    - linux
+    - windows
+
 rust:
     - nightly
     - beta
@@ -8,4 +12,3 @@ rust:
 matrix:
     allow_failures:
         - rust: nightly
-
