[performance] Improve the performance of damerau_levenshtein
My tests show the new version is approximately 2.5 times faster than
the old ones. Most of the gains come from using hashbrown for the
hashmap.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,11 @@ homepage = "https://github.com/dguo/strsim-rs"
 repository = "https://github.com/dguo/strsim-rs"
 documentation = "https://docs.rs/strsim/"
 exclude = ["/.travis.yml", "/appveyor.yml", "/dev"]
+edition="2018"
+
+[dependencies]
+hashbrown = "0.1.8"
+ndarray = "0.12.1"
 
 [badges]
 travis-ci = { repository = "dguo/strsim-rs" }
