--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["string", "similarity", "Hamming", "Levenshtein", "Jaro"]
 homepage = "https://github.com/dguo/strsim-rs"
 repository = "https://github.com/dguo/strsim-rs"
 documentation = "https://docs.rs/strsim/"
-exclude = ["/.travis.yml", "/appveyor.yml", "/dev"]
+exclude = ["/.travis.yml", "/dev"]
 
 [dependencies]
 hashbrown = "0.1.8"
@@ -20,4 +20,3 @@ ndarray = "0.12.1"
 
 [badges]
 travis-ci = { repository = "dguo/strsim-rs" }
-appveyor = { repository = "dguo/strsim-rs" }
