--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ repository = "https://github.com/dguo/strsim-rs"
 documentation = "https://docs.rs/strsim/"
 exclude = ["/.travis.yml", "/appveyor.yml", "/dev"]
 
+[dependencies]
+ndarray = "0.12.1"
+
 [badges]
 travis-ci = { repository = "dguo/strsim-rs" }
 appveyor = { repository = "dguo/strsim-rs" }
