--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
 language: rust
-
 os:
     - linux
     - windows
-
+    - osx
 rust:
     - 1.31.0
     - nightly
     - beta
     - stable
-
-matrix:
-    allow_failures:
-        - rust: nightly
