--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ rust:
 matrix:
     allow_failures:
         - rust: nightly
+
+script:
+    - if [[ "$TRAVIS_RUST_VERSION" == "nightly" ]]; then
+          cargo test --features readme;
+      else
+          cargo test;
+      fi
