Add generative test cases

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ exclude = ["/.travis.yml", "/dev"]
 
 [badges]
 travis-ci = { repository = "dguo/strsim-rs" }
+
+[dev-dependencies]
+proptest = "0.9.4"
