--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,4 @@
 github: [dguo, maxbachmann]
+ko_fi: dannyguo
+liberapay: dannyguo
+custom: ["https://www.paypal.com/donate/?hosted_button_id=VGWQBBD5CTWJU", "https://www.paypal.com/paypalme/DannyGuo", "https://www.buymeacoffee.com/dannyguo"]
