Test the formatting check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
             toolchain: stable
             override: true
       - name: Check formatting
-        run: cargo fmt -- --check
+        run: cargo fmt --check
