--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ OSA, Damerau-Levenshtein, Jaro, Jaro-Winkler, and Sørensen-Dice.
 license = "MIT"
 readme = "README.md"
 keywords = ["string", "similarity", "Hamming", "Levenshtein", "Jaro"]
-homepage = "https://github.com/dguo/strsim-rs"
-repository = "https://github.com/dguo/strsim-rs"
+homepage = "https://github.com/rapidfuzz/strsim-rs"
+repository = "https://github.com/rapidfuzz/strsim-rs"
 documentation = "https://docs.rs/strsim/"
 exclude = ["/.github", "/dev"]
