Use rust-version field of Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ Implementations of string similarity metrics. Includes Hamming, Levenshtein,
 OSA, Damerau-Levenshtein, Jaro, Jaro-Winkler, and Sørensen-Dice.
 """
 license = "MIT"
+rust-version = "1.56"
 readme = "README.md"
 keywords = ["string", "similarity", "Hamming", "Levenshtein", "Jaro"]
 homepage = "https://github.com/rapidfuzz/strsim-rs"
