--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = """
 Implementations of string similarity metrics. Includes Hamming, Levenshtein,
 OSA, Damerau-Levenshtein, Jaro, Jaro-Winkler, and Sørensen-Dice.
 """
+edition = "2018"
 license = "MIT"
 readme = "README.md"
 keywords = ["string", "similarity", "Hamming", "Levenshtein", "Jaro"]
