--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = """
 Implementations of string similarity metrics. Includes Hamming, Levenshtein,
 OSA, Damerau-Levenshtein, Jaro, Jaro-Winkler, and Sørensen-Dice.
 """
+edition = "2021"
 license = "MIT"
 rust-version = "1.56"
 readme = "README.md"
